magic stand te basically working doesn't keep it's content though

--- a/main/resources/assets/miraculous/lang/en_US.lang
+++ b/main/resources/assets/miraculous/lang/en_US.lang
@@ -60,6 +60,6 @@ advancements.basics.mine_salt.description=Mine some Salt Ore
 advancements.basics.shotgun.title=Shotgun!
 advancements.basics.shotgun.description=Craft a Shotgun
 advancements.basics.rosary.title=Are we in a church or what?
-advancements.basics.rosary.description=Craft and fill a Rosary
+advancements.basics.rosary.description=Craft a Rosary
 advancements.basics.colt.title=Yet another gun
 advancements.basics.colt.description=Craft a Colt
